[package]
name = "littlefs-rs-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2.2"

[build-dependencies]
anyhow = "1"
cc = "1"

[build-dependencies.bindgen]
version = "0.63.0"

[features]
default = []
assertions = []
trace = []
