[package]
name = "littlefs-rs-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2.2"

[build-dependencies]
anyhow = "1"
cc = "1"
zip = { version = "0", optional = true }

[build-dependencies.bindgen]
version = "0.63.0"

[build-dependencies.reqwest]
version = "0.11"
features = ["blocking", "json"]
optional = true

[features]
default = []
online = ["reqwest", "zip"]
no_lib = []
assert = []
trace = []
malloc = []
debug = []
warn = []
error = []
